--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /* color and fonts variables */
 :root {
-  --clr--background: #E5E5E5;
-  --clr--white: #FFFFFF;
-  --clr-black: #000000;
+  --clr--background: #e5e5e5;
+  --clr--white: #ffffff;
+  --clr--black: #000000;
 
-  --clr--primary: #21243D;
-  --clr--secondary: #8695A4;
+  --clr--primary: #21243d;
+  --clr--secondary: #8695a4;
 
-  --clr--accent: #FF6464;
-  --clr--accent-secondary: #00A8CC;
-  --clr--accent-tertiary: #EDF7FA;
+  --clr--accent: #ff6464;
+  --clr--accent-secondary: #00a8cc;
+  --clr--accent-tertiary: #edf7fa;
 
-  --ff-primary: 'Heebo', sans-serif;
+  --ff-primary: "Heebo", sans-serif;
   --ff-body: var(--ff-primary);
   --ff-accent: var(--ff-primary);
 
@@ -27,20 +27,30 @@
   --fs-800: 1.875rem; /*30px */
   --fs-850: 2rem; /* 32px */
   --fs-900: 2.75rem; /* 44px */
-  
+
   --fs-body: var(--fs-400);
   --fs-primary-heading: var(--fs-850);
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-500);
+
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 }
 
 /* color and fonts variables for desktops */
 @media (min-width: 50em) {
   :root {
-  --fs-body: var(--fs-500);
-  --fs-primary-heading: var(--fs-900);
-  --fs-secondary-heading: var(--fs-800);
+    --fs-body: var(--fs-500);
+    --fs-primary-heading: var(--fs-900);
+    --fs-secondary-heading: var(--fs-800);
   }
 }
 
@@ -61,8 +71,8 @@
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -98,9 +108,9 @@ picture {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
@@ -112,8 +122,25 @@ picture {
 }
 
 /* Utility classes */
+.visually-hidden {
+  position: absolute;
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
+
+.flow * + * {
+  margin-top: var(--floe-spacer, 2rem);
+}
+
 .text-primary {
-  color: var(--clr--primary); 
+  color: var(--clr--primary);
 }
 
 .text-secondary {
@@ -170,22 +197,287 @@ picture {
 
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
+  line-height: 3.75rem;
 }
 
 .fs-secondary-heading {
   font-size: var(--fs-secondary-heading);
+  line-height: 2.375rem;
 }
 
-.fs-400 {font-size: var(--fs-400)}
-.fs-500 {font-size: var(--fs-500)}
-.fs-600 {font-size: var(--fs-600)}
-.fs-700 {font-size: var(--fs-700)}
-.fs-800 {font-size: var(--fs-800)}
-.fs-850 {font-size: var(--fs-850)}
-.fs-900 {font-size: var(--fs-900)}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-800 {
+  font-size: var(--fs-800);
+}
+.fs-850 {
+  font-size: var(--fs-850);
+}
+.fs-900 {
+  font-size: var(--fs-900);
+}
+
+.padding-block-200 {
+  padding-block: var(--size-200);
+}
+.padding-block-400 {
+  padding-block: var(--size-400);
+}
+.padding-block-600 {
+  padding-block: var(--size-600);
+}
+.padding-block-900 {
+  padding-block: var(--size-900);
+}
+
+.container {
+  --max-width: 858px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - var(--padding) * 2);
+  margin-inline: auto;
+}
+.even-columns {
+  display: flex;
+  gap: 1rem;
+}
+
+@media (max-width: 50em) {
+  .even-columns {
+    flex-direction: column;
+  }
+}
 
 /* general styling */
 
+body {
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr--primary);
+}
 
+.button {
+  cursor: pointer;
+  border: none;
+  padding: 0.75em 1em;
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-600);
+  line-height: 1;
+}
 
+.button:hover,
+.button:focus-visible {
+  box-shadow: 5px 5px 10px var(--clr--accent);
+}
 
+/*navigation*/
+.primary-header {
+  padding-top: var(--size-500);
+}
+.nav-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.mobile-nav-toggle {
+  display: none;
+}
+.nav-list {
+  font-size: var(--fs-500);
+  font-weight: var(--fw-bold);
+  display: flex;
+  gap: clamp(var(--size-500), 5vw, var(--size-700));
+}
+.nav-list a {
+  text-decoration: none;
+  color: var(--clr--black);
+}
+.nav-list a:hover,
+.nav-list a:focus {
+  color: var(--clr--accent);
+}
+@media (max-width: 50em) {
+  .primary-navigation {
+    display: none;
+
+    position: fixed;
+    padding: var(--size-600);
+    inset: var(--size-900) var(--size-400) auto;
+    max-width: 25rem;
+    margin-left: auto;
+    background: var(--clr--accent-tertiary);
+    border-radius: var(--size-200);
+    box-shadow: 0 0 0.75em rgba(0, 0, 0 0.05);
+  }
+  .primary-header[data-overlay]::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background-image: linear-gradient(rgb(0 0 0 / 0), rgb(0 0 0 /0.8));
+  }
+  .nav-list {
+    display: grid;
+    gap: var(--size-500);
+    text-align: center;
+    font-weight: var(--fw-bold);
+  }
+  .nav-list a {
+    text-decoration: none;
+    color: var(--clr--black);
+  }
+  .nav-list a:hover,
+  .nav-list a:focus {
+    text-decoration: none;
+    color: var(--clr--accent);
+  }
+  .primary-navigation[data-visible] {
+    display: block;
+  }
+  .mobile-nav-toggle {
+    display: block;
+    position: fixed;
+    top: var(--size-500);
+    right: var(--size-600);
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.25em;
+  }
+  .mobile-nav-toggle .icon-close {
+    display: none;
+  }
+}
+
+/* Hero Section */
+@media (min-width: 50em) {
+  .left-hero {
+    flex: 1 1 0;
+  }
+}
+@media (max-width: 50em) {
+  .hero {
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+  .fs-primary-heading {
+    line-height: 2.5rem;
+    margin-top: var(--floe-spacer, 1.5rem);
+  }
+}
+
+/* Posts Section */
+.container-box {
+  padding: var(--size-400);
+}
+.header-divider {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: var(--size-400);
+}
+.view-all {
+  text-decoration: none;
+}
+.post-header {
+  margin-inline: var(--size-500);
+}
+.date-desc-separator {
+  display: flex;
+  gap: 1.5rem;
+  margin-inline: var(--size-500);
+}
+.post-desc {
+  margin-inline: var(--size-500);
+}
+@media (max-width: 50em) {
+  .container-box {
+    padding: 0;
+  }
+  .header-divider {
+    justify-content: center;
+  }
+  .view-all {
+    display: none;
+  }
+  .recent-post {
+    font-size: var(--fs-800);
+  }
+  .post-header {
+    margin-left: var(--size-500);
+  }
+  .date-desc-separator {
+    padding: var(--size-200);
+  }
+  .post-desc {
+    margin-left: var(--size-500);
+    padding-bottom: var(--size-400);
+  }
+}
+
+/* Featured Works Section */
+.works {
+  display: flex;
+}
+.works-rightside {
+  display: flex;
+  flex-direction: column;
+  margin-inline: var(--size-400);
+  gap: var(--size-400);
+}
+.works-rightside-subtext {
+  display: flex;
+  gap: var(--size-400);
+  align-items: center;
+}
+
+.break-line {
+  border-top: 1px solid rgb(0 0 0 /0.2);
+}
+.works-year {
+  border-radius: 500px;
+  background-color: var(--clr--primary);
+  padding: 0 var(--size-200);
+
+}
+
+@media (max-width: 50em) {
+  .works {
+    flex-direction: column;
+  }
+  .works-rightside {
+    margin-top: var(--size-400);
+  }
+}
+
+/* Footer */
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: var(--size-900);
+}
+.footer-list {
+  display: flex;
+  gap: var(--size-400);
+}
+.footer-list a {
+  text-decoration: none;
+  background-color: var(--clr--primary);
+  color: var(--clr--white);
+  padding: 0 var(--size-200);
+  border-radius: 25%;
+}
+#footer-transparent {
+  background-color: transparent;
+  color: var(--clr--primary);
+}
